update php-myadmin theme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - HTTP_USER=changeme
       - HTTP_PASS=changeme
+      - TZ=Asia/Ho_Chi_Minh
     ports:
       # - 8080:8080/tcp  # uncomment to use web ui
       - 53:53/udp
@@ -21,12 +22,13 @@ services:
     networks:
       - vidivadev
 
-  phpmyadmin:
-    image: phpmyadmin
-    container_name: phpmyadmin
+  php-myadmin:
+    image: xdung24/php-myadmin
+    container_name: php-myadmin
     environment:
       - PMA_ARBITRARY=1
       - UPLOAD_LIMIT=500M
+      - TZ=Asia/Ho_Chi_Minh
     restart: always
     ports:
       - 8081:80
@@ -42,6 +44,8 @@ services:
     image: xdung24/redis-ui
     container_name: redis-ui
     restart: always
+    environment:
+      - TZ=Asia/Ho_Chi_Minh
     ports:
       - 8082:7843
     volumes:
@@ -56,8 +60,9 @@ services:
     ports:
       - 8083:80
     environment:
-      PGADMIN_DEFAULT_EMAIL: pg@email.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      - TZ=Asia/Ho_Chi_Minh
+      - PGADMIN_DEFAULT_EMAIL=pg@email.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
     volumes:
       - ./pgadmin:/var/lib/pgadmin
     networks:
@@ -66,6 +71,8 @@ services:
   mongodb-gui:
     image: samueltallet/mongodb-php-gui
     container_name: mongodb-gui
+    environment:
+      - TZ=Asia/Ho_Chi_Minh
     restart: always
     ports:
       - 8084:5000
